--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ torchvision = "^0.9.0"
 sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
