--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
+Sphinx = "^3.5.3"
+sphinx-rtd-theme = "^0.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
